test/errors/wrongprint.csmall
#include <stdio.h>

int main() {
	printf("Hallo.);
	return 0;
}